# harina-v4

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.ja.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  sitecustomize.py  tsconfig.json
.github/workflows/: ci.yml  pages.yml
app/: __init__.py  bot.py  category_catalog.py  cli.py  config.py  dataset_downloader.py  discord_debug.py  discord_setup.py  discord_upload_test.py  drive_watcher.py  formatters.py  gemini_client.py  gemini_smoke_test.py  google_auth.py  google_oauth.py  google_setup.py  google_workspace.py  local_receipt_runner.py  main.py  models.py  processor.py  prompting.py  team_intake.py  team_setup.py  test_asset_runner.py
app/templates/: receipt_categorization_prompt.j2  receipt_extraction_prompt.j2
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/architecture/: harina-v4-flow.drawio  harina-v4-flow.ja.drawio
docs/guide/: cli.md  dataset-downloader.md  deployment.md  gemini-smoke-test.md  google-setup.md  (+6 more)
src/: config.ts  index.ts  receipt-schema.ts
tests/: conftest.py  receipt-format.test.ts  test_attachment_dedup.py  test_bot.py  test_cli.py  test_config.py  test_dataset_downloader.py  test_discord_debug.py  test_discord_setup.py  test_docker_compose.py  test_drive_watcher.py  test_formatters.py  test_gemini_client.py  test_gemini_smoke_test.py  test_google_oauth.py  test_google_setup.py  test_google_workspace.py  test_processor.py  test_prompting.py  test_test_asset_runner.py
tmp/: release-qa-v4.4.0.md
(+25 files in other folders)
